rspec-tools/tests/resources/invalid-asciidoc/triple_backquotes.adoc
We don't like people using three backquotes to display one in monospace ```

Instead they should write `++`++`
